gramatica/KryptoParser.py
# Generated from gramatica/KryptoParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KryptoParser ( Parser ):

    grammarFileName = "KryptoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'krif'", "'krelse'", "'krloop'", "'krfor'", 
                     "'krin'", "'krfunc'", "'yield'", "'stop'", "'use'", 
                     "'alias'", "'num'", "'dec'", "'logic'", "'text'", "'chain'", 
                     "'vault'", "'grid'", "'dataset'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'^'", "'='", "':'", "','", "';'", "'.'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'=='", "'!='", 
                     "'<='", "'>='", "'<'", "'>'", "'||'", "'&&'", "'!'", 
                     "'k_plot'", "'k_show'", "'k_title'", "'k_xlabel'", 
                     "'k_ylabel'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "WHILE", "FOR", "IN", "FUNCTION", 
                      "RETURN", "END", "IMPORT", "AS", "INT", "FLOAT", "BOOL_T", 
                      "STRING_T", "LIST", "DICC", "MATRIX", "DATAFRAME", 
                      "BOOL_LIT", "NUMBER", "STRING", "ID", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "POW", "ASSIGN", "COLON", "COMMA", 
                      "SEMI", "DOT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "EQ", "NEQ", "LE", "GE", "LT", 
                      "GT", "OR", "AND", "NOT", "PLOTVAG", "SHOWVAG", "TITLEVAG", 
                      "XLABELVAG", "YLABELVAG", "COMMENT", "BLOCK_COMMENT", 
                      "WS", "STOP" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_varDecl = 2
    RULE_type = 3
    RULE_assignment = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_block = 8
    RULE_functionDecl = 9
    RULE_paramList = 10
    RULE_returnStmt = 11
    RULE_expr = 12
    RULE_functionCall = 13
    RULE_argList = 14
    RULE_literal = 15
    RULE_kryptoGraphicStmt = 16

    ruleNames =  [ "program", "statement", "varDecl", "type", "assignment", 
                   "ifStatement", "whileStatement", "forStatement", "block", 
                   "functionDecl", "paramList", "returnStmt", "expr", "functionCall", 
                   "argList", "literal", "kryptoGraphicStmt" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    WHILE=3
    FOR=4
    IN=5
    FUNCTION=6
    RETURN=7
    END=8
    IMPORT=9
    AS=10
    INT=11
    FLOAT=12
    BOOL_T=13
    STRING_T=14
    LIST=15
    DICC=16
    MATRIX=17
    DATAFRAME=18
    BOOL_LIT=19
    NUMBER=20
    STRING=21
    ID=22
    PLUS=23
    MINUS=24
    MUL=25
    DIV=26
    MOD=27
    POW=28
    ASSIGN=29
    COLON=30
    COMMA=31
    SEMI=32
    DOT=33
    LPAREN=34
    RPAREN=35
    LBRACK=36
    RBRACK=37
    LBRACE=38
    RBRACE=39
    EQ=40
    NEQ=41
    LE=42
    GE=43
    LT=44
    GT=45
    OR=46
    AND=47
    NOT=48
    PLOTVAG=49
    SHOWVAG=50
    TITLEVAG=51
    XLABELVAG=52
    YLABELVAG=53
    COMMENT=54
    BLOCK_COMMENT=55
    WS=56
    STOP=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KryptoParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.StatementContext)
            else:
                return self.getTypedRuleContext(KryptoParser.StatementContext,i)


        def getRuleIndex(self):
            return KryptoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = KryptoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17732940955908314) != 0):
                self.state = 34
                self.statement()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(KryptoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(KryptoParser.VarDeclContext,0)


        def SEMI(self):
            return self.getToken(KryptoParser.SEMI, 0)

        def assignment(self):
            return self.getTypedRuleContext(KryptoParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(KryptoParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(KryptoParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(KryptoParser.ForStatementContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(KryptoParser.FunctionDeclContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(KryptoParser.ReturnStmtContext,0)


        def kryptoGraphicStmt(self):
            return self.getTypedRuleContext(KryptoParser.KryptoGraphicStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = KryptoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.varDecl()
                self.state = 43
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.assignment()
                self.state = 46
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.forStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.functionDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.returnStmt()
                self.state = 53
                self.match(KryptoParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 55
                self.kryptoGraphicStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 56
                self.expr(0)
                self.state = 57
                self.match(KryptoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(KryptoParser.TypeContext,0)


        def ID(self):
            return self.getToken(KryptoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(KryptoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = KryptoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.type_()
            self.state = 62
            self.match(KryptoParser.ID)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 63
                self.match(KryptoParser.ASSIGN)
                self.state = 64
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(KryptoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(KryptoParser.FLOAT, 0)

        def BOOL_T(self):
            return self.getToken(KryptoParser.BOOL_T, 0)

        def STRING_T(self):
            return self.getToken(KryptoParser.STRING_T, 0)

        def LIST(self):
            return self.getToken(KryptoParser.LIST, 0)

        def MATRIX(self):
            return self.getToken(KryptoParser.MATRIX, 0)

        def DICC(self):
            return self.getToken(KryptoParser.DICC, 0)

        def DATAFRAME(self):
            return self.getToken(KryptoParser.DATAFRAME, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = KryptoParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 522240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(KryptoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(KryptoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = KryptoParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(KryptoParser.ID)
            self.state = 70
            self.match(KryptoParser.ASSIGN)
            self.state = 71
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(KryptoParser.IF, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.BlockContext)
            else:
                return self.getTypedRuleContext(KryptoParser.BlockContext,i)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def ELSE(self):
            return self.getToken(KryptoParser.ELSE, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = KryptoParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(KryptoParser.IF)
            self.state = 74
            self.match(KryptoParser.LPAREN)
            self.state = 75
            self.expr(0)
            self.state = 76
            self.match(KryptoParser.RPAREN)
            self.state = 77
            self.block()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 78
                self.match(KryptoParser.ELSE)
                self.state = 79
                self.block()


            self.state = 82
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(KryptoParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KryptoParser.BlockContext,0)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = KryptoParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(KryptoParser.WHILE)
            self.state = 85
            self.match(KryptoParser.LPAREN)
            self.state = 86
            self.expr(0)
            self.state = 87
            self.match(KryptoParser.RPAREN)
            self.state = 88
            self.block()
            self.state = 89
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(KryptoParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(KryptoParser.AssignmentContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(KryptoParser.SEMI)
            else:
                return self.getToken(KryptoParser.SEMI, i)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KryptoParser.BlockContext,0)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def getRuleIndex(self):
            return KryptoParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = KryptoParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(KryptoParser.FOR)
            self.state = 92
            self.match(KryptoParser.LPAREN)
            self.state = 93
            self.assignment()
            self.state = 94
            self.match(KryptoParser.SEMI)
            self.state = 95
            self.expr(0)
            self.state = 96
            self.match(KryptoParser.SEMI)
            self.state = 97
            self.assignment()
            self.state = 98
            self.match(KryptoParser.RPAREN)
            self.state = 99
            self.block()
            self.state = 100
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(KryptoParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(KryptoParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KryptoParser.StatementContext)
            else:
                return self.getTypedRuleContext(KryptoParser.StatementContext,i)


        def getRuleIndex(self):
            return KryptoParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = KryptoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(KryptoParser.LBRACE)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17732940955908314) != 0):
                self.state = 103
                self.statement()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self.match(KryptoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(KryptoParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(KryptoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KryptoParser.BlockContext,0)


        def STOP(self):
            return self.getToken(KryptoParser.STOP, 0)

        def paramList(self):
            return self.getTypedRuleContext(KryptoParser.ParamListContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = KryptoParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(KryptoParser.FUNCTION)
            self.state = 112
            self.match(KryptoParser.ID)
            self.state = 113
            self.match(KryptoParser.LPAREN)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 114
                self.paramList()


            self.state = 117
            self.match(KryptoParser.RPAREN)
            self.state = 118
            self.block()
            self.state = 119
            self.match(KryptoParser.STOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(KryptoParser.ID)
            else:
                return self.getToken(KryptoParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KryptoParser.COMMA)
            else:
                return self.getToken(KryptoParser.COMMA, i)

        def getRuleIndex(self):
            return KryptoParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = KryptoParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(KryptoParser.ID)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 122
                self.match(KryptoParser.COMMA)
                self.state = 123
                self.match(KryptoParser.ID)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(KryptoParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def getRuleIndex(self):
            return KryptoParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = KryptoParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(KryptoParser.RETURN)
            self.state = 130
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KryptoParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class OpNotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KryptoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(KryptoParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpNot" ):
                listener.enterOpNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpNot" ):
                listener.exitOpNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpNot" ):
                return visitor.visitOpNot(self)
            else:
                return visitor.visitChildren(self)


    class OpParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KryptoParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(KryptoParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(KryptoParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(KryptoParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpParens" ):
                listener.enterOpParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpParens" ):
                listener.exitOpParens(self)
